# Alloy

./: .dockerignore  .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  UPDATE_IDEAS_200.md  WORKFLOW.csv  WORKFLOW.md  WORKFLOW_20260123_DONE.csv  compose.single.yml  compose.yml  docker-compose.images.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/alloy-agent/: Cargo.toml
crates/alloy-agent/src/: control_tunnel.rs  download_progress.rs  dsp.rs  dsp_source_init.rs  dst.rs  dst_download.rs  error_payload.rs  filesystem_service.rs  health_service.rs  instance_service.rs  logs_service.rs  main.rs  minecraft.rs  minecraft_curseforge.rs  minecraft_download.rs  minecraft_import.rs  minecraft_launch.rs  minecraft_modrinth.rs  port_alloc.rs  process_manager.rs  process_manager_support.rs  process_service.rs  sandbox.rs  templates.rs  terraria.rs  terraria_download.rs
crates/alloy-control/: Cargo.toml
crates/alloy-control/src/: agent_transport.rs  agent_tunnel.rs  audit.rs  auth.rs  lib.rs  main.rs  minecraft_versions.rs  node_health.rs  request_meta.rs  rpc.rs  security.rs  state.rs  update.rs
crates/alloy-core/: Cargo.toml
crates/alloy-db/: Cargo.toml
crates/alloy-db/src/: lib.rs
crates/alloy-db/src/entities/: audit_events.rs  download_jobs.rs  frp_nodes.rs  mod.rs  nodes.rs  refresh_tokens.rs  settings.rs  users.rs
crates/alloy-migration/: Cargo.toml
crates/alloy-migration/src/: lib.rs  m0001_create_users.rs  m0002_create_nodes.rs  m0003_create_refresh_tokens.rs  m0004_create_audit_events.rs  m0005_add_node_connect_token.rs  m0006_create_settings.rs  m0007_create_frp_nodes.rs  m0008_add_frp_node_metadata.rs  m0009_create_download_jobs.rs
crates/alloy-process/: Cargo.toml
crates/alloy-process/src/: lib.rs
crates/alloy-proto/: Cargo.toml  build.rs
crates/alloy-proto/proto/alloy/agent/v1/: agent.proto  filesystem.proto  instance.proto  logs.proto  process.proto
crates/alloy-proto/src/: lib.rs
daemon/: Dockerfile  PROTOCOL.md  go.mod
daemon/cmd/elegantmc-daemon/: main.go
daemon/internal/backup/: zip_paths.go
daemon/internal/commands/: executor.go  executor_test.go  frp_read_ini.go  fs_chmod.go  fs_copy.go  fs_hash.go  fs_search.go  fs_stat.go  fs_zip.go  fs_zip_list.go  mc_backup_prune.go  mc_backup_verify.go  mc_detect_jar.go  mc_java_cache.go  mc_log_search.go  net_probe_tcp.go  schedule.go
daemon/internal/config/: config.go
daemon/internal/frp/: manager.go
daemon/internal/mc/: manager.go  portcheck.go  temurin.go
daemon/internal/protocol/: protocol.go
daemon/internal/scheduler/: instance_backup_scheduler.go  scheduler.go
daemon/internal/wsclient/: client.go
deploy/: README.md  agent.Dockerfile  control.Dockerfile  docker-compose.release.yml  docker-compose.yml  nginx.conf  web.Dockerfile
panel/: Dockerfile  README.md  package.json
panel/app/: appCtx.tsx  globals.css  layout.tsx  page.tsx  swrCache.ts  useEvent.ts
panel/app/ui/: CodeBlock.tsx  CopyButton.tsx  EmptyState.tsx  EnvHelpButton.tsx  ErrorBoundary.tsx  Icon.tsx  ModalStack.tsx  Select.tsx  Sparkline.tsx  StatusBadge.tsx  TimeAgo.tsx  Tooltip.tsx
panel/app/views/: AdvancedView.tsx  FilesView.tsx  FrpView.tsx  GamesView.tsx  NodesView.tsx  PanelView.tsx
panel/docs/: README.md  SECURITY.md
panel/scripts/: bundle-audit.mjs  smoke.mjs
panel/server/: index.mjs  state.mjs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/game-icons/: README.md
web/src/: App.tsx  auth.ts  bindings.ts  index.css  index.tsx  rspc.ts
web/src/app/: types.ts
web/src/app/helpers/: agentErrors.ts  createInstancePreview.ts  downloads.ts  formFocus.ts  format.ts  instances.ts  misc.ts  network.ts  templateBrand.ts
web/src/app/hooks/: useSidebarState.ts  useThemePreference.ts  useToastBus.ts
web/src/app/primitives/: DownloadProgress.tsx  LabelTip.tsx  StartProgress.tsx  StatusPill.tsx  VisibilityToggle.tsx
web/src/components/: AddNodeModal.tsx  AppAuthOverlay.tsx  AppMainPanels.tsx  AppMobileDrawer.tsx  AppModals.tsx  AppShell.tsx  AppSidebarNav.tsx  AppStatusBanners.tsx  AppTopHeader.tsx  ControlDiagnosticsModal.tsx  DeleteInstanceModal.tsx  DownloadTaskModal.tsx  Dropdown.tsx  DspInitModal.tsx  EditInstanceModal.tsx  FileBrowser.tsx  FrpNodeModal.tsx  InstanceDetailsModal.tsx  LogViewer.tsx  LoginModal.tsx  ToastPortal.tsx
web/src/components/ui/: Badge.tsx  Banner.tsx  Breadcrumbs.tsx  Button.tsx  ButtonLink.tsx  Drawer.tsx  EmptyState.tsx  ErrorState.tsx  Field.tsx  GameAvatar.tsx  IconButton.tsx  Input.tsx  Link.tsx  Modal.tsx  Skeleton.tsx  Spinner.tsx  Tabs.tsx  TemplateMark.tsx  Textarea.tsx  Tooltip.tsx  VirtualLines.tsx
web/src/layout/: AppLayout.tsx
web/src/pages/: DownloadsTab.tsx  FilesPage.tsx  FrpTab.tsx  InstancesCreatePanel.tsx  InstancesGridPanel.tsx  InstancesPage.tsx  InstancesTab.tsx  NodesPage.tsx  NodesTab.tsx  SettingsTab.tsx
web/src/pages/downloads/: DownloadsTabSections.tsx  DownloadsTabUi.tsx
web/src/pages/instances-create/: DspCreateSection.tsx  DstCreateSection.tsx  MinecraftCreateSection.tsx  TerrariaCreateSection.tsx
web/src/pages/instances-grid/: InstanceCard.tsx  InstanceCardActions.tsx  InstanceCardHeader.tsx  InstanceQuickActions.tsx  InstanceRunActions.tsx  InstancesCardsArea.tsx  InstancesFilterBar.tsx
