[workspace]
resolver = "2"
members = [
  "crates/alloy-core",
  "crates/alloy-proto",
  "crates/alloy-agent",
  "crates/alloy-control",
  "crates/alloy-db",
  "crates/alloy-migration",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
