[package]
name = "alloy-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
libc = "0.2"
tokio = { workspace = true, features = ["io-util", "process", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

alloy-proto = { path = "../alloy-proto" }
alloy-process = { path = "../alloy-process" }
