[package]
name = "alloy-agent"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
hex = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
tokio = { workspace = true, features = ["fs", "io-util", "process", "time"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zip = "2"

alloy-proto = { path = "../alloy-proto" }
alloy-process = { path = "../alloy-process" }
