[package]
name = "alloy-agent"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
futures-util = "0.3"
hex = "0.4"
libc = "0.2"
prost = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = "0.10"
tokio = { workspace = true, features = ["fs", "io-util", "process", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { workspace = true }
zip = "2"

alloy-proto = { path = "../alloy-proto" }
alloy-process = { path = "../alloy-process" }
