[package]
name = "alloy-control"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-proto = { path = "../alloy-proto" }
alloy-process = { path = "../alloy-process" }
anyhow = { workspace = true }
axum = { workspace = true }
rspc = { workspace = true }
rspc-axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
