[package]
name = "alloy-control"
version = "0.2.0"
edition = "2024"

[dependencies]
alloy-proto = { path = "../alloy-proto" }
alloy-process = { path = "../alloy-process" }
alloy-db = { path = "../alloy-db" }
alloy-migration = { path = "../alloy-migration" }
anyhow = { workspace = true }
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"
axum-extra = { workspace = true }
argon2 = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
prost = { workspace = true }
rspc = { workspace = true }
rspc-axum = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true, features = ["derive"] }
time = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
